8195109: ServiceUtil::visible_oop is not needed anymore

Strip out ServiceUtil and all users of it

Reviewed-by: coleenp, stefank, jcbeyler, sspitsyn